--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- The main buttons section -->
       Use the buttons below to adjust the server configuration settings.
       <div class="btnContainer">
-        <button type="button" class="flipflop off" id="BaseGamebutton" onclick="SHfuntion('BaseGame')">Basic Configuration</button>
+        <button type="button" class="flipflop off" id="BaseGamebutton" onclick="SHfuntion('BaseGame')">Basic Settings</button>
         <button type="button" class="flipflop off" id="Weatherbutton" onclick="SHfuntion('Weather')">Weather Settings</button>
         <button type="button" class="flipflop off" id="Worldbutton" onclick="SHfuntion('World')">World Settings</button>
         <button type="button" class="flipflop off" id="Dino1button" onclick="SHfuntion('Dino1')">Global Dino Settings</button>
@@ -74,10 +74,10 @@
     <div class="SectionContainer">
 
       <!---------------------------------------------------------------------------------------------------------------------------->
-      <!-- Basic Configuration -->
+      <!-- Basic Settings -->
       <div class="Section" id="BaseGame" style="display: none">
         <div class="section-header">
-          Basic Configuration
+          Basic Settings
           <span class="close" onclick="topFunction()">Top ↑</span>
         </div>
 
@@ -266,8 +266,7 @@
 
         <!-- Reserved Admin Slots -->
         <label for="slots">Reserved Admin Slots:</label>
-        <input type="number" id="slots" value=2 step=1 style="width:40px">
-        <label for="slots" class="switch"></label>
+        <input type="number" id="slots" value="2" step=1 style="width:40px">
         <br />
 
         <!-- Disable Global Chat -->
@@ -315,12 +314,11 @@
         <label for="bDisableUseRandomName" class="switch"></label>
       </div>
       <!---------------------------------------------------------------------------------------------------------------------------->
-
       <!---------------------------------------------------------------------------------------------------------------------------->
-
+      <!-- Weather Settings -->
       <div class="Section" id="Weather" style="display: none">
         <div class="section-header">
-          Weather Configuration
+          Weather Settings
           <span class="close" onclick="topFunction()">Top ↑</span>
         </div>
         <label><span class="tooltip">Enable Forest fires:<span class="tooltiptext">This will effect storm and admin spawned fires.</span></span></label>
@@ -1141,12 +1139,12 @@
                   <option value="DefaultAdmin" selected>DefaultAdmin</option>
                 </select>
               </td>
-              <td><input type="text" value="Developer"></td>
-              <td><input type="color" value="#ff3300" onchange="ValidateColor(this)"></td>
-              <td><input type="text" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" onchange="ValidateColor(this)" size=7 maxlength="7" value="#ff3300" style="vertical-align: middle"></td>
+              <td><input type="text" value="Lead Developer"></td>
+              <td><input type="color" value="#de7415" onchange="ValidateColor(this)"></td>
+              <td><input type="text" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" onchange="ValidateColor(this)" size=7 maxlength="7" value="#de7415" style="vertical-align: middle"></td>
               <td><input type="button" value="X" disabled></td>
               <td><input type="button" value="+" onclick="StaffAddRow(this)"></td>
-              <td><a href="https://steamcommunity.com/id/Predatoria/" target="_blank">Predatoria</a></td>
+              <td><a href="https://steamcommunity.com/id/Predatoria" target="_blank">Predatoria</a></td>
             </tr>
             <tr>
               <td><input type="number" value="76561198122870810" onchange="validateid(this)" onwheel="this.blur()"></td>
@@ -1157,15 +1155,15 @@
                   <option value="DefaultAdmin" selected>DefaultAdmin</option>
                 </select>
               </td>
-              <td><input type="text" value="Developer"></td>
-              <td><input type="color" value="#00b2b2" onchange="ValidateColor(this)"></td>
-              <td><input type="text" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" onchange="ValidateColor(this)" size=7 maxlength="7" value="#00b2b2" style="vertical-align: middle"></td>
+              <td><input type="text" value="Lead Developer"></td>
+              <td><input type="color" value="#714ee7" onchange="ValidateColor(this)"></td>
+              <td><input type="text" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" onchange="ValidateColor(this)" size=7 maxlength="7" value="#714ee7" style="vertical-align: middle"></td>
               <td><input type="button" value="X" onclick="StaffRemoveRow(this)"></td>
               <td><input type="button" value="+" onclick="StaffAddRow(this)"></td>
-              <td><a href="https://steamcommunity.com/id/Soals/" target="_blank">Soals</a></td>
+              <td><a href="https://steamcommunity.com/id/Soals" target="_blank">Soals</a></td>
             </tr>
             <tr>
-              <td><input type="number" value="76561198077984700" onchange="validateid(this)" onwheel="this.blur()"></td>
+              <td><input type="number" value="76561198150485108" onchange="validateid(this)" onwheel="this.blur()"></td>
               <td>
                 <select name="Ranks">
                   <option value=" " selected> </option>
@@ -1173,12 +1171,12 @@
                   <option value="DefaultAdmin">DefaultAdmin</option>
                 </select>
               </td>
-              <td><input type="text" value="Tech Admin"></td>
-              <td><input type="color" value="#000fff" onchange="ValidateColor(this)"></td>
-              <td><input type="text" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" onchange="ValidateColor(this)" size=7 maxlength="7" value="#000fff" style="vertical-align: middle"></td>
+              <td><input type="text" value="Developer"></td>
+              <td><input type="color" value="#714ee7" onchange="ValidateColor(this)"></td>
+              <td><input type="text" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" onchange="ValidateColor(this)" size=7 maxlength="7" value="#714ee7" style="vertical-align: middle"></td>
               <td><input type="button" value="X"></td>
               <td><input type="button" value="+" onclick="StaffAddRow(this)"></td>
-              <td><a href="https://steamcommunity.com/id/cleafspear/" target="_blank">Cleafspear</a></td>
+              <td><a href="https://steamcommunity.com/id/anexmos" target="_blank">Anexmos</a></td>
             </tr>
           </tbody>
         </table>
@@ -1479,8 +1477,8 @@
           Configuration Output
           <span class="close" onclick="topFunction()">Top ↑</span>
         </div>
-        <input type="button" value="Generate Game.ini below" onclick="GenertateTXT()">
-        <input type="button" value="Download Game.ini" onclick="GenerateFile()">
+        <input type="button" id="GenFile" value="Generate Game.ini below" onclick="GenertateTXT()">
+        <input type="button" id="DownFile" value="Download Game.ini" onclick="GenerateFile()">
         <br />
         <p>Generate Game.ini will compile all the setting in the textarea below, and Download Game.ini will download a complete, ready to go file. When changing a setting, you must re-generate the ini by clicking a button above.</p>
         <textarea rows="30" cols="120" style="scroll-behavior: auto ;resize: horizontal" id="Output" readonly>Click Generate Game.ini to output your config here,or click Download Game.ini to download a ready to insert file</textarea>
