Added Google Analytics tracking notice.

--- a/index.html
+++ b/index.html
@@ -2076,7 +2076,7 @@
         Steam API Provided by <a href="https://salumee.com" target="_blank" style="cursor:pointer; text-decoration:none;">SALUMEE</a>
       </div>
       <div class='Fsectionc'>
-        This web app includes no tracking, either internal or third-party.
+        This website uses Google Analytics to collect anonymous data to improve user experience. By using this site, you consent to this data collection.
         <br />
         Licensed under the <a href="https://opensource.org/licenses/MIT" target="_blank">Open Source MIT License</a>.
       </div>
